--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site">
-            <li class="site__item"><a href="">Главная</a></li>
+            <li class="site__item site__item--active"><a>Главная</a></li>
             <li class="site__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site__item"><a href="">Форма отзыва</a></li>
             <li class="site__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
