доделал module1-task1

--- a/source/form.html
+++ b/source/form.html
@@ -24,8 +24,12 @@
 
     <main class="page-main">
       <h1 class="visually-hidden">Отзыв о посещении достопримечательностей Седоны</h1>
-      <section class="welcome-photo">
-        <h2 class="visually-hidden">Великолепный вид гор Седоны</h2>
+
+      <section class="promo">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <div class="promo__picture brand-small">
+          <img class="promo__image" src="https://via.placeholder.com/229x39" width="229" height="39" alt="Welcome to the gardeous Sedona">
+        </div>
       </section>
 
       <section class="reviews">
