--- a/source/index.html
+++ b/source/index.html
@@ -23,9 +23,13 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-      <section class="welcome">
-        <h2 class="visually-hidden">Великолепный вид гор Седоны</h2>
+      <h1 class="visually-hidden">Выбор отеля в Седоне</h1>
+
+      <section class="promo">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <div class="promo__picture brand-big">
+          <img class="promo__image" src="https://via.placeholder.com/281x214" width="281" height="214" alt="Welcome to the gardeous Sedona">
+        </div>
       </section>
 
       <section class="slogan">
@@ -36,14 +40,14 @@
         </div>
       </section>
 
-      <section class="city">
-        <div class="city__content">
-          <h2 class="city__title">Настоящий городок</h2>
-          <p class="city__number">— №1 —</p>
-          <p class="city__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <section class="landmark">
+        <div class="landmark__content">
+          <h2 class="landmark__title">Настоящий городок</h2>
+          <p class="landmark__number">— №1 —</p>
+          <p class="landmark__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
-        <div class="city__picture">
-          <img class="city__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Фотография городка Седона">
+        <div class="landmark__picture">
+          <img class="landmark__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Фотография городка Седона">
         </div>
       </section>
 
@@ -77,14 +81,14 @@
         </ul>
       </section>
 
-      <section class="bridge">
-        <div class="bridge__content">
-          <h2 class="bridge__title">Там есть мост дъявола</h2>
-          <p class="bridge__number">— №2 —</p>
-          <p class="bridge__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      <section class="landmark">
+        <div class="landmark__content">
+          <h2 class="landmark__title">Там есть мост дъявола</h2>
+          <p class="landmark__number">— №2 —</p>
+          <p class="landmark__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
-        <div class="bridge__picture">
-          <img class="bridge__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Мост дъявола в Седоне">
+        <div class="landmark__picture">
+          <img class="landmark__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Мост дъявола в Седоне">
         </div>
       </section>
 
