--- a/source/form.html
+++ b/source/form.html
@@ -33,7 +33,48 @@
       </section>
 
       <section class="reviews">
-        <h2 class="reviews">Оставьте свой отзыв</h2>
+        <h2 class="reviews__title">Оставьте свой отзыв</h2>
+        <p class="reviews__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
+        </p>
+        <form class="reviews__form form" action="https://echo.htmlacademy.ru">
+          <fieldset class="form__person person">
+            <legend class="person__title">Представьтесь:</legend>
+            <label class="person__firstname">Имя<span>*</span>:<input class="person__firstname-input" name="firstname" type="text" placeholder="Петр" required></label>
+            <label class="person__lastname">Фамилия<span>*</span>:<input class="person__lastname-input" name="lastname" type="text" placeholder="Иванов" required></label>
+            <label class="person__middlename">Отчество:<input class="person__middlename-input" name="middlename" type="text" placeholder="Александрович"></label>
+          </fieldset>
+
+          <fieldset class="form__contact contact">
+            <legend class="contact__title">Контактная информация:</legend>
+            <label class="contact__phone">Контактный телефон<span>*</span>:<input class="contact__phone-input" name="phone" type="text" placeholder="Введите телефон" required></label>
+            <div class="contact__phone-icon"><span class="visually-hidden">Иконка телефонной трубки</span></div>
+            <label class="contact__email">Электронная почта<span>*</span>:<input class="contact__email-input" name="email" type="text" placeholder="Введите e-mail" required></label>
+            <div class="contact__email-icon"><span class="visually-hidden">Иконка электронной почты</span></div>
+          </fieldset>
+
+          <fieldset class="form__impression impression">
+            <legend class="impression__title">Ваше общее впечатление:</legend>
+            <label class="impression__select"><input class="impession__input" name="impression" type="radio" value="plus" checked>Скорее положительное</label>
+            <label class="impression__select"><input class="impession__input" name="impression" type="radio" value="minus">Скорее отрицательное</label>
+            <label class="impression__select"><input class="impession__input" name="impression" type="radio" value="plus-minus">Затрудняюсь ответить</label>
+          </fieldset>
+
+          <fieldset class="form__visited visited">
+            <legend class="visited__title">Посещенные достопримечательности:</legend>
+            <label class="visited__select"><input class="visited__input" name="visited_devils_bridge" type="checkbox" checked>Мост Дьявола</label>
+            <label class="visited__select"><input class="visited__input" name="visited_bell_mountain" type="checkbox" checked>Гора-Колокол</label>
+            <label class="visited__select"><input class="visited__input" name="visited_slide_park" type="checkbox" checked>Слайд-парк</label>
+            <label class="visited__select"><input class="visited__input" name="visited_red_rock" type="checkbox">Красные скалы</label>
+          </fieldset>
+
+          <fieldset class="form__emotions emotions">
+            <legend class="emotions__title">Опишите свои эмоции:</legend>
+            <textarea class="emotions__text" name="emotions" cols="50" rows="8" maxlength="1000" placeholder="Опишите подробно все свои восторги"></textarea>
+          </fieldset>
+
+          <button class="form__submit button">Отправить отзыв</button>
+
+        </form>
       </section>
     </main>
 
@@ -57,6 +98,21 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal error">
+      <h2 class="visually-hidden">Ошибки при заполнении формы</h2>
+      <h3 class="error__title">Что-то пошло не так!</h3>
+      <p class="error__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="error__button button" type="button">Ок</button>
+    </section>
+
+    <section class="modal success">
+      <h2 class="visually-hidden">Сообщение при успешной отправке формы</h2>
+      <h3 class="success__title">Ваш отзыв отправлен!</h3>
+      <p class="success__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.
+      </p>
+      <button class="success__button button" type="button">Закрыть окно</button>
+    </section>
 
   </body>
 </html>
