--- a/source/photo.html
+++ b/source/photo.html
@@ -74,9 +74,28 @@
             <p class="photo__author">Автор фото: Антон</p>
             <p class="photo__evaluation"><span class="visually-hidden">Оценка фотографии:</span>254</p>
           </li>
-
         </ul>
       </section>
+
+      <section class="video">
+        <h2 class="video__title">Все еще сомневаетесь?</h2>
+        <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
+        </p>
+        <video class="video__video"
+	        src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+          width="321"
+          height="201"
+          controls
+          poster="https://via.placeholder.com/321x201"
+          preload="none">
+        </video>
+        <div class="video__controls control">
+          <button class="control__rewind"><span class="visually-hidden">Перемотать назад</span></button>
+          <button class="control__cc"><span class="visually-hidden">Что-то сделать</span></button>
+          <button class="control__fullscreen"><span class="visually-hidden">На полный экран</span></button>
+        </div>
+      </section>
+
     </main>
 
     <footer class="page-footer">
