--- a/source/index.html
+++ b/source/index.html
@@ -127,7 +127,7 @@
         <!-- <div class="map__picture">
           <img class="map__image" src="https://via.placeholder.com/320x350" width="320" height="350"  alt="Карта Седоны">
         </div> -->
-        <iframe class="map__interactive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" width="320" height="350" frameborder="0"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe class="map__interactive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" width="320" height="350" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
     </main>
 
