--- a/source/index.html
+++ b/source/index.html
@@ -2,22 +2,23 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <a href="" class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип городка Седона">
+        <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site">
-            <li class="site__item site__item--active"><a>Главная</a></li>
-            <li class="site__item"><a href="photo.html">Фото и видео</a></li>
-            <li class="site__item"><a href="form.html">Форма отзыва</a></li>
-            <li class="site__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
+          <ul class="main-nav__list menu">
+            <li class="menu__item menu__item--active"><a>Главная</a></li>
+            <li class="menu__item"><a href="photo.html">Фото и видео</a></li>
+            <li class="menu__item"><a href="form.html">Форма отзыва</a></li>
+            <li class="menu__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
           </ul>
         </div>
       </nav>
@@ -29,7 +30,7 @@
       <section class="promo">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <div class="promo__picture brand-big">
-          <img class="promo__image" src="https://via.placeholder.com/281x214" width="281" height="214" alt="Welcome to the gardeous Sedona">
+          <img class="promo__image" src="img/text-sedona-index.svg" width="281" height="214" alt="Welcome to the gardeous Sedona">
         </div>
       </section>
 
@@ -41,14 +42,14 @@
         </div>
       </section>
 
-      <section class="landmark">
-        <div class="landmark__content">
+      <section class="landmark landmark--city">
+        <div class="landmark__content landmark__content--city">
           <h2 class="landmark__title">Настоящий городок</h2>
           <p class="landmark__number">— №1 —</p>
           <p class="landmark__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
-        <div class="landmark__picture">
-          <img class="landmark__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Фотография городка Седона">
+        <div class="landmark__picture landmark__picture--city">
+          <img class="landmark__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фотография городка Седона">
         </div>
       </section>
 
@@ -57,39 +58,42 @@
         <ul class="advantage-living__list living">
           <li class="living__item">
             <div class="living__photo living__photo--house">
-              <img class="living__image" src="https://via.placeholder.com/37x36" width="37" height="36" alt="Иконка жилья">
+              <img class="living__image" src="./img/icon-house.svg" width="37" height="36" alt="Иконка жилья">
             </div>
-            <h3 class="living__title">Жильё</h3>
-            <p class="living__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <div class="living__content">
+              <h3 class="living__title">Жильё</h3>
+              <p class="living__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
           </li>
-          <li class="living-item">
+          <li class="living__item">
             <div class="living__photo living__photo--souvenirs">
-              <img class="living__image" src="https://via.placeholder.com/32x38" width="32" height="38" alt="Иконка сувениров">
+              <img class="living__image" src="./img/icon-gift.svg" width="32" height="38" alt="Иконка сувениров">
             </div>
-            <h3 class="living__title">Сувениры</h3>
-            <p class="living__text">Не только китайского, но и местного производства!</p>
+            <div class="living__content">
+              <h3 class="living__title">Сувениры</h3>
+              <p class="living__text">Не только китайского, но и местного производства!</p>
+            </div>
           </li>
-
-          <li class="living-item">
+          <li class="living__item">
             <div class="living__photo living__photo--food">
-              <img class="living__image" src="https://via.placeholder.com/40x35" width="40" height="35" alt="Иконка еды">
+              <img class="living__image" src="./img/icon-burger.svg" width="40" height="35" alt="Иконка еды">
             </div>
-            <h3 class="living__title">Еда</h3>
-            <p class="living__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <div class="living__content">
+              <h3 class="living__title">Еда</h3>
+              <p class="living__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </div>
           </li>
-
-
         </ul>
       </section>
 
-      <section class="landmark">
-        <div class="landmark__content">
+      <section class="landmark landmark--bridge">
+        <div class="landmark__content landmark__content--bridge">
           <h2 class="landmark__title">Там есть мост дъявола</h2>
           <p class="landmark__number">— №2 —</p>
-          <p class="landmark__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <p class="landmark__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
-        <div class="landmark__picture">
-          <img class="landmark__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="Мост дъявола в Седоне">
+        <div class="landmark__picture landmark__picture--bridge">
+          <img class="landmark__image" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост дъявола в Седоне">
         </div>
       </section>
 
@@ -118,17 +122,19 @@
         <h2 class="visually-hidden">Приглашаем посетить Седону</h2>
         <div class="invitation__content">
           <strong class="invitation__question">Заинтересовались?</strong>
-          <p class="invitation__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="invitation__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         </div>
         <a class="invitation__button" href="search-hotel.html" onclick="alert('Opening the hotel search page');">Найти гостиницу</a>
       </section>
 
       <section class="map">
         <h2 class="visually-hidden">Карта Седоны</h2>
-        <!-- <div class="map__picture">
-          <img class="map__image" src="https://via.placeholder.com/320x350" width="320" height="350"  alt="Карта Седоны">
-        </div> -->
-        <iframe class="map__interactive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" width="320" height="350" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <noscript>
+          <div class="map__picture">
+            <img class="map__image" src="https://via.placeholder.com/320x350" width="320" height="350"  alt="Карта Седоны">
+          </div>
+        </noscript>
+        <iframe class="map__interactive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" width="100%" height="350" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
     </main>
 
@@ -139,15 +145,35 @@
         </p>
         <div class="page-footer__social social">
           <ul class="social__list">
-            <li class="social__item"><a href="" class="social__link social__link--twitter"><span class="visually-hidden">Мы в Твиттере</span></a></li>
-            <li class="social__item"><a href="" class="social__link social__link--facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a></li>
-            <li class="social__item"><a href="" class="social__link social__link--youtube"><span class="visually-hidden">Мы в Ютубе</span></a></li>
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="" aria-label="link to Twitter">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="" aria-label="link to Facebook">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+                  <path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="" aria-label="link to Youtube">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+                  <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <p class="copyright__text">Разработано:</p>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="copyright__image" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTMLAcademy">
+          <p class="copyright__text">Разработано</p>
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg>
           </a>
         </div>
       </div>
