подключил шрифты локально согласно Б9

--- a/source/form.html
+++ b/source/form.html
@@ -41,7 +41,7 @@
           </p>
         </div>
 
-        <div class="container--divider"></div>
+        <div class="container container--divider"></div>
 
         <form class="reviews__form form" action="https://echo.htmlacademy.ru">
           <fieldset class="form__person person">
@@ -63,7 +63,7 @@
 
           </fieldset>
 
-          <div class="container--divider"></div>
+          <div class="container container--divider"></div>
 
           <fieldset class="form__contact contact">
             <legend class="legend contact__title">Контактная информация:</legend>
@@ -86,7 +86,7 @@
 
           </fieldset>
 
-          <div class="container--divider"></div>
+          <div class="container container--divider"></div>
 
           <fieldset class="form__impression impression">
             <legend class="legend impression__title">Ваше общее впечатление:</legend>
@@ -102,7 +102,7 @@
 
           </fieldset>
 
-          <div class="container--divider"></div>
+          <div class="container container--divider"></div>
 
           <fieldset class="form__visited visited">
             <legend class="legend visited__title">Посещенные достопримечательности:</legend>
@@ -121,7 +121,7 @@
 
           </fieldset>
 
-          <div class="container--divider"></div>
+          <div class="container container--divider"></div>
 
           <fieldset class="form__emotions emotions">
             <legend class="legend emotions__title">Опишите свои эмоции:</legend>
