--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
       <section class="slogan">
         <h2 class="visually-hidden">Призыв посетить Седону</h2>
         <div class="slogan__content">
-          <strong class="slogan__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
+          <strong class="slogan__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</strong>
           <p class="slogan__five-reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
       </section>
@@ -45,8 +45,8 @@
       <section class="landmark landmark--city">
         <div class="landmark__content landmark__content--city">
           <h2 class="landmark__title">Настоящий городок</h2>
-          <p class="landmark__number">— №1 —</p>
-          <p class="landmark__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <p class="landmark__number">&ndash; №1 &ndash;</p>
+          <p class="landmark__text">Седона не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
         <div class="landmark__picture landmark__picture--city">
           <img class="landmark__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Фотография городка Седона">
@@ -89,7 +89,7 @@
       <section class="landmark landmark--bridge">
         <div class="landmark__content landmark__content--bridge">
           <h2 class="landmark__title">Там есть мост дъявола</h2>
-          <p class="landmark__number">— №2 —</p>
+          <p class="landmark__number">&ndash; №2 &ndash;</p>
           <p class="landmark__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
         <div class="landmark__picture landmark__picture--bridge">
@@ -102,17 +102,17 @@
         <ul class="advantage-location__list location">
           <li class="location__item">
             <h3 class="location__title">Небольшая площадь</h3>
-            <p class="location__number">— №3 —</p>
+            <p class="location__number">&ndash; №3 &ndash;</p>
             <p class="location__text">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="location__item">
             <h3 class="location__title">Красивая дорога</h3>
-            <p class="location__number">— №4 —</p>
+            <p class="location__number">&ndash; №4 &ndash;</p>
             <p class="location__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="location__item">
             <h3 class="location__title">Мало туристов</h3>
-            <p class="location__number">— №5 —</p>
+            <p class="location__number">&ndash; №5 &ndash;</p>
             <p class="location__text">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ul>
