--- a/source/photo.html
+++ b/source/photo.html
@@ -34,7 +34,7 @@
         </div>
       </section>
 
-      <section class="media wrapper">
+      <section class="media wrapper wrapper--photo">
         <div class="media__wrap">
           <h2 class="media__title">Фото и видео</h2>
           <p class="media__text">
